# auto_groupedmap_udf

./: .pypirc  README.md  pyproject.toml  setup.py
src/auto_groupedmap_udf.egg-info/: PKG-INFO  SOURCES.txt
