[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_groupedmap_udf"
version = "0.0.1"
authors = [
  { name="Manish Sharma", email="manishb2km@gmail.com" },
]
description = "A package to automatically generate schemas for grouped map udf on pyspark. Also contains various debugging tools."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
